[project]
name = "sms-newsletter"
version = "0.1.0"
description = "Bot for sending messages to Kirill in army"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "python-decouple>=3.8",
    "telethon>=1.42.0",
]
